--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "env-cmd": "^10.1.0",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
+    "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
