--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "env-cmd": "^10.1.0",
     "http-proxy-middleware": "^2.0.6",
+    "json-server": "^0.17.0",
     "react": "^18.2.0",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.2.0",
